commit start files

--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -8,13 +8,30 @@
 
   <script>
     // start with strings, numbers and booleans
-
-    // Let's say we have an array
+	let age = 100;
+	let age2 = age;
+	console.log(age, age2);
+    age = 200;
+	console.log(age, age2);
+	
+	let name = 'Oleg';
+	let name2 = name;
+	console.log (name, name2);
+	name = 'Anna';
+	console.log(name, name2);
+	
+	
+	// Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+	const team = players;
+	
+	console.log(players, team);
 
     // You might think we can just do something like this:
+	/*team[3] = 'lux';
+	console.log(players, team);*/
 
     // however what happens when we update that array?
 
@@ -25,26 +42,69 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
-
+	const team2 = players.slice();
+	/*team2[3] = 'lux';
+	console.log(players, team2);*/
+	
     // one day
 
     // or create a new array and concat the old one in
-
+	const team3 = [].concat(players);
+	/*team3[3] = 'lux';
+	console.log(players, team3);*/
+	
     // or use the new ES6 Spread
+	const team4 = [...players];
+	/*team4[3] = 'lux';
+	console.log(players, team4);*/
+	
+	const team5 = Array.from(players);
+	team5[3] = 'lux';
+	console.log(players, team5);
 
     // now when we update it, the original one isn't changed
 
     // The same thing goes for objects, let's say we have a person object
 
     // with Objects
+	const person = {
+		name: 'Oleg T',
+		age: 27
+	}
 
     // and think we make a copy:
-
+	const captain = person
+	/*captain.number = 99;
+	console.log(person, captain);*/
+	
     // how do we take a copy instead?
-
+	const cap2 = Object.assign({}, person, {number: 99})
+	console.log(person, cap2);
+	
+	
     // We will hopefully soon see the object ...spread
-
+	//const cap3 = {...person};
+	
+	
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+	const oleg = {
+		name: 'oleg',
+		age: 27,
+		social: {
+			facebook: 'oleg.tkachenko'
+		}
+	}
+	
+	console.log(oleg);
+	const dev = Object.assign({}, oleg);
+	console.log(dev);
+	
+	/*dev.social.facebook = 'test';
+	console.log(dev, oleg);*/
+	
+	const dev2 = JSON.parse(JSON.stringify(oleg));
+	dev2.social.facebook = 'test';
+	console.log(dev2, oleg);
 
   </script>
 
