--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-
+	function playSound(e){
+		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); //Шаблонные строки https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/template_strings
+		const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+		if (!audio) return;
+		audio.volume = 0.2;
+		audio.currentTime = 0;
+		audio.play();
+		key.classList.add('playing');
+	}
+	
+	function removeTransition(e){
+		if (e.propertyName !== 'transform') return;
+		this.classList.remove('playing');
+	}
+	
+	const keys = document.querySelectorAll('.key');
+	keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+	window.addEventListener('keydown', playSound);
+	
 </script>
 
 
