--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -56,17 +56,40 @@
     }
 
     .hand {
-      width:50%;
-      height:6px;
-      background:black;
-      position: absolute;
-      top:50%;
+		width:50%;
+		height:6px;
+		background:black;
+		position: absolute;
+		top:50%;
+		transform-origin: 100%;
+		transform: rotate(90deg);
+		transition: all .05s;
+		transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
-
+	var secondHand = document.querySelector('.second-hand');
+	var minsHand = document.querySelector('.min-hand');
+	var hourHand = document.querySelector('.hour-hand');
+	
+	function setDate(){
+		var now = new Date();
+		var seconds = now.getSeconds();
+		var secondDegrees = ((seconds / 60) * 360) + 90;
+		secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+		
+		var mins = now.getMinutes();
+		var minDegrees = ((mins / 60) * 360) + 90;
+		minsHand.style.transform = `rotate(${minDegrees}deg)`
+		
+		var hour = now.getHours();
+		var hourDegrees = ((hour / 12) * 360) + 90;
+		hourHand.style.transform = `rotate(${hourDegrees}deg)`
+	}
+	
+	setInterval(setDate, 1000);
 
   </script>
 </body>
