--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+	  display: flex;
     }
 
     .panel {
@@ -31,7 +32,6 @@
       box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
       color:white;
       text-align: center;
-      align-items:center;
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
@@ -41,6 +41,11 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+	  flex: 1;
+	  justify-content: center;
+	  align-items: center;
+	  display: flex;
+	  flex-direction: column;
     }
 
 
@@ -54,8 +59,21 @@
       margin:0;
       width: 100%;
       transition:transform 0.5s;
+	  justify-content: center;
+	  align-items: center;
+	  display: flex;
+	  flex: 1 0 auto;
     }
-
+	.panel > *:first-child {
+		transform: translateY(-100%);
+	}
+	.panel.open-active > *:first-child,
+	.panel.open-active > *:last-child{
+		transform: translateY(0);
+	}
+	.panel > *:last-child {
+		transform: translateY(100%);
+	}
     .panel p {
       text-transform: uppercase;
       font-family: 'Amatic SC', cursive;
@@ -67,6 +85,7 @@
     }
 
     .panel.open {
+	  flex: 5;
       font-size:40px;
     }
 
@@ -107,10 +126,23 @@
   </div>
 
   <script>
-
+	const panels = document.querySelectorAll('.panel');
+	function toggleOpen() {
+		this.classList.toggle('open');
+	}
+	function toggleActive(e) {
+		if(e.propertyName.indexOf("flex")) {
+			this.classList.toggle('open-active');
+		}
+		
+	}
+	
+	panels.forEach(function(panel) {
+		panel.addEventListener('click', toggleOpen);
+	})
+	panels.forEach(function(panel) {
+		panel.addEventListener('transitionend', toggleActive);
+	})
   </script>
-
-
-
 </body>
 </html>
