--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,59 @@
     }
 
     // Regular
+	console.log('hello');
 
     // Interpolated
+	console.log('hello I am a %s string!', ':)');
 
     // Styled
+	console.log('%c I am some great text', 'font-size: 18px; background: red');
 
     // warning!
+	console.warn('oh nooo')
 
     // Error :|
+	console.error('shit!');
 
     // Info
+	console.info('crocodiles eat 3-4 people per year');
 
     // Testing
+	console.assert( 1 === 2, 'That is wrong!');
 
     // clearing
+	//console.clear();
 
     // Viewing DOM Elements
+	var p = document.querySelector('p');
+	console.log(p);
+	console.dir(p);
 
     // Grouping together
+	dogs.forEach(dog => {
+		console.groupCollapsed(`${dog.name}`);
+		console.log(`This is ${dog.name}`);
+		console.log(`${dog.name} is ${dog.age} years old`);console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+		console.groupEnd(`${dog.name}`);
+	})
 
     // counting
+	console.count('Oleg');
+	console.count('Oleg');
+	console.count('Oleg');
+	console.count('Oleg');
 
     // timing
+	console.time('fetching data');
+	fetch('https://api.github.com/users/oltkachenko')
+		.then(data => data.json())
+		.then(data => {
+			console.timeEnd('fetching data');
+			console.log(data);
+		})
+	
+	//table
+	console.table(dogs);
 
   </script>
 </body>
