--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -5,6 +5,7 @@
   <title>Videos</title>
 </head>
 <body>
+	<div class="total"></div>
   <ul class="videos">
     <li data-time="5:43">
       Video 1
@@ -182,6 +183,25 @@
     </li>
 
 <script>
+	const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
+	
+	const seconds = timeNodes
+	.map(function(node){return node.dataset.time})
+	.map(timeCode => {
+		const [mins, secs] = timeCode.split(':').map(parseFloat);
+		return (mins * 60) + secs;
+	})
+	.reduce((total, vidSeconds) => total + vidSeconds);
+	
+	let secondsLeft = seconds;
+	const hours = Math.floor(secondsLeft / 3600);
+	secondsLeft = secondsLeft % 3600;
+	
+	const mins = Math.floor(secondsLeft / 60);
+	secondsLeft = secondsLeft % 60;
+	
+	const total = document.querySelector('.total');
+	total.innerHTML = (hours + ',' + mins + ',' + secondsLeft);
 </script>
 </body>
 </html>
